--- a/.github/workflows/build-release.yml
+++ b/.github/workflows/build-release.yml
@@ -5,11 +5,55 @@ on:
     tags:
       - 'v*'
   workflow_dispatch:
+    inputs:
+      version:
+        description: 'Version to build (e.g., 1.5.0)'
+        required: false
+        default: ''
 
 permissions:
   contents: write
 
+env:
+  GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
 jobs:
+  build-mac:
+    runs-on: macos-latest
+    
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: '20'
+          cache: 'npm'
+          cache-dependency-path: electron-menubar/package-lock.json
+
+      - name: Install dependencies
+        working-directory: electron-menubar
+        run: npm ci
+
+      - name: Build Mac (arm64 + x64)
+        working-directory: electron-menubar
+        run: npm run build:universal
+        env:
+          # Mac Code Signing (optional)
+          APPLE_ID: ${{ secrets.APPLE_ID }}
+          APPLE_APP_SPECIFIC_PASSWORD: ${{ secrets.APPLE_APP_SPECIFIC_PASSWORD }}
+          APPLE_TEAM_ID: ${{ secrets.APPLE_TEAM_ID }}
+
+      - name: Upload Mac artifacts
+        uses: actions/upload-artifact@v4
+        with:
+          name: mac-build
+          path: |
+            electron-menubar/dist/*.dmg
+            electron-menubar/dist/*.zip
+            electron-menubar/dist/latest-mac.yml
+
   build-windows:
     runs-on: windows-latest
     
@@ -33,9 +77,6 @@ jobs:
         run: npm run build:win
         env:
           # Windows Code Signing (optional - funktioniert auch ohne)
-          # Füge diese Secrets in GitHub hinzu wenn du ein Zertifikat hast:
-          # CSC_LINK: Base64-kodierte .pfx Datei
-          # CSC_KEY_PASSWORD: Passwort des Zertifikats
           CSC_LINK: ${{ secrets.WIN_CSC_LINK }}
           CSC_KEY_PASSWORD: ${{ secrets.WIN_CSC_KEY_PASSWORD }}
 
@@ -45,52 +86,45 @@ jobs:
           name: windows-build
           path: |
             electron-menubar/dist/*.exe
-            electron-menubar/dist/*.zip
+            electron-menubar/dist/latest.yml
 
-      - name: Create Release
-        if: startsWith(github.ref, 'refs/tags/')
-        uses: softprops/action-gh-release@v1
-        with:
-          files: |
-            electron-menubar/dist/*.exe
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-
-  build-mac:
-    runs-on: macos-latest
+  create-release:
+    needs: [build-mac, build-windows]
+    runs-on: ubuntu-latest
+    if: startsWith(github.ref, 'refs/tags/')
     
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
-
-      - name: Setup Node.js
-        uses: actions/setup-node@v4
-        with:
-          node-version: '20'
-          cache: 'npm'
-          cache-dependency-path: electron-menubar/package-lock.json
-
-      - name: Install dependencies
-        working-directory: electron-menubar
-        run: npm ci
-
-      - name: Build Mac DMG
-        working-directory: electron-menubar
-        run: npm run build
-
-      - name: Upload Mac artifacts
-        uses: actions/upload-artifact@v4
+      - name: Download Mac artifacts
+        uses: actions/download-artifact@v4
         with:
           name: mac-build
-          path: |
-            electron-menubar/dist/*.dmg
-            electron-menubar/dist/*.zip
+          path: ./mac-build
 
-      - name: Create Release
-        if: startsWith(github.ref, 'refs/tags/')
-        uses: softprops/action-gh-release@v1
+      - name: Download Windows artifacts
+        uses: actions/download-artifact@v4
         with:
+          name: windows-build
+          path: ./windows-build
+
+      - name: List files
+        run: |
+          echo "Mac build:"
+          ls -la ./mac-build/ || true
+          echo ""
+          echo "Windows build:"
+          ls -la ./windows-build/ || true
+
+      - name: Create GitHub Release
+        uses: softprops/action-gh-release@v2
+        with:
+          generate_release_notes: true
+          draft: false
+          prerelease: false
           files: |
-            electron-menubar/dist/*.dmg
+            ./mac-build/*.dmg
+            ./mac-build/*.zip
+            ./mac-build/latest-mac.yml
+            ./windows-build/*.exe
+            ./windows-build/latest.yml
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
